# copilot-stop-notify

./: .gitignore  Cargo.toml  LICENSE  README.md  package_release.ps1
.github/hooks/: copilot-stop-notif.env.example  copilot-stop-notif.json  copilot-stop-notify.json
.github/release-assets/: copilot-stop-notif.env.example
.github/workflows/: ci.yml  release.yml
hooks/: copilot-stop-notify.json
hooks/copilot-stop-notif/: copilot-stop-notif.env.example
src/: config.rs  dedup.rs  email.rs  event.rs  html.rs  lib.rs  main.rs  main_copilot_stop_notif.rs  redact.rs  transcript.rs
tests/: generate_test_html.rs  test_copilot_stop_notif.rs  test_integration.rs  test_real_email.rs  test_real_transcript_replay.rs
