[package]
name = "copilot-stop-notify"
version = "2.0.1"
edition = "2021"
description = "VS Code Copilot 会话结束后自动发送邮件通知"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "native-tls", "hostname", "builder"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "s"
lto = true
strip = true
